# steam-tool

./: README.md  README_ES.md  build.bat  opensteamtool.example.toml
.github/workflows/: main.yml  tools.yml
src/: CMakeLists.txt  dllmain.cpp  dllmain.h
src/Hook/: HookMacros.h  HookManager.cpp  Hooks_Decryption.cpp  Hooks_Decryption.h  Hooks_IPC.cpp  Hooks_IPC.h  Hooks_IPC_ISteamUser.cpp  Hooks_IPC_ISteamUser.h  Hooks_IPC_ISteamUtils.cpp  Hooks_KeyValues.cpp  Hooks_Misc.cpp  Hooks_Misc.h  Hooks_NetPacket.cpp  Hooks_Package.cpp  Hooks_SteamUI.cpp  PendingAPICalls.cpp  PendingAPICalls.h
src/OSTPlatform/: CMakeLists.txt  Encoding.cpp  Log.cpp  Numbers.cpp
src/OSTPlatform/Linux/: .gitkeep
src/OSTPlatform/Windows/: ByteSearch.cpp  Detour.cpp  Dialog.cpp  DirectoryWatch.cpp  DynamicLibrary.cpp  Handles.h  Hash.cpp  Http.cpp  Memory.cpp  NtAbi.h  PE.cpp  Process.cpp  RemoteProcess.cpp  SteamCredentialStore.cpp  Thread.cpp  Trap.cpp
src/OSTPlatform/include/: ByteSearch.h  Detour.h  Dialog.h  DirectoryWatch.h  DynamicLibrary.h  Encoding.h  Hash.h  Http.h  Log.h  Memory.h  Numbers.h  PE.h  Process.h  RemoteProcess.h  SteamCredentialStore.h  Stopwatch.h  Thread.h  Trap.h
src/Pipe/: PipeManager.cpp  PipeManager.h  PipeTypes.h  ProcessInspector.cpp  ProcessInspector.h
src/Steam/: Callback.h  Enums.h  IPCMessages.steamd  Structs.h
src/Utils/: AppTicket.cpp  AppTicket.h  Config.cpp  Config.h  IPCLoader.cpp  PatternLoader.cpp  PatternLoader.h  RemoteToml.cpp  RemoteToml.h  SteamDiagnostics.cpp
src/Utils/Config/: Config.cpp  Config.h  ConfigFileWatcher.cpp  ConfigFileWatcher.h  LuaConfig.cpp  LuaConfig.h  LuaFileWatcher.cpp  LuaFileWatcher.h
src/Utils/HookSupport/: VehCommon.cpp  VehCommon.h
src/Utils/Logging/: Log.cpp  Log.h  LogModules.def
src/Utils/SteamMetadata/: IPCLoader.cpp  IPCLoader.h  ManifestClient.cpp  ManifestClient.h  PatternLoader.cpp  PatternLoader.h  RemoteToml.cpp  SteamDiagnostics.cpp  SteamDiagnostics.h
src/cmake/: LogMacros.cmake  OpenSteamToolBuildInfo.h.in
src/xinput1_4/: xinput1_4.cpp
tools/: CMakeLists.txt
tools/cmake/: IPCCodegen.cmake
tools/extract_tickets/: extract_tickets.cpp  steam.h
tools/ipc_codegen/: ipc_codegen.cpp
(+10 files in other folders)
